--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				portfolioBar.className = "bar state-3"
 			}
 		</script>
-		<div class="mySlides">
+		<div id="mySlides">
 			<div class="swiper-container">
 				<!-- Additional required wrapper -->
 				<div class="swiper-wrapper">
