--- a/index.html
+++ b/index.html
@@ -182,13 +182,40 @@
 			<div class="swiper-button-next"></div>
 		</div>
 	</section>
+
+	<section class="message">
+		<h2>留言</h2>
+		<ol id="messageList">
+
+		</ol>
+		<form action="" id="postMessageForm">
+			<label for="">姓名</label>
+			<input type="text" name="name">
+			<label for="">内容</label>
+			<input type="text" name="content">
+			<input type="submit" value="提交">
+		</form>
+	</section>
+
+
+
+
+
+
+
+
+
+	<script src='./js/loading.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js'></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.min.js"></script>
+	<script src="//cdn1.lncld.net/static/js/3.6.0/av-min.js"></script>
+	<!-- 模块化 -->
 	<script src='./js/init-swiper.js'></script>
 	<script src='./js/auto-slide-up.js'></script>
 	<script src='./js/sticky-topbar.js'></script>
 	<script src='./js/smoothly-navigation.js'></script>
-	<script src='./js/loading.js'></script>
+	<script src='./message.js'></script>
+	
 </body>
 
 </html>
