--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
 
 <head>
 	<meta charset="UTF-8">
@@ -152,17 +152,7 @@
 				<div class="bar-inner"></div>
 			</div>
 		</nav>
-		<script>
-			portfolio1.onclick = function () {
-				portfolioBar.className = "bar state-1"
-			}
-			portfolio2.onclick = function () {
-				portfolioBar.className = "bar state-2"
-			}
-			portfolio3.onclick = function () {
-				portfolioBar.className = "bar state-3"
-			}
-		</script>
+		
 		<div id="mySlides">
 			<div class="swiper-container">
 				<!-- Additional required wrapper -->
@@ -182,7 +172,6 @@
 			<div class="swiper-button-next"></div>
 		</div>
 	</section>
-
 	<section class="message">
 		<h2>留言</h2>
 		<ol id="messageList">
@@ -196,15 +185,6 @@
 			<input type="submit" value="提交">
 		</form>
 	</section>
-
-
-
-
-
-
-
-
-
 	<script src='./js/loading.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js'></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.min.js"></script>
@@ -214,8 +194,7 @@
 	<script src='./js/auto-slide-up.js'></script>
 	<script src='./js/sticky-topbar.js'></script>
 	<script src='./js/smoothly-navigation.js'></script>
-	<script src='./message.js'></script>
-	
+	<script src='./js/message.js'></script>
 </body>
 
 </html>
